Merged HEAD-BUG-FIX (4.3/Cloud) to HEAD (4.3/Cloud)    58520: Upped the memory for the sameVM tests and categorised the AVM tests
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/alfresco/HEAD/root@62003 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261